# aquarm-frontend

./: .env.development  .env.production  .gitignore  .gitlab-ci.yml  Dockerfile  README.md  entrypoint.sh  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
.github/workflows/: build-push.yaml
nginx/: nginx.conf
notebooks/: README.md  h3_to_cog.ipynb  pyproject.toml  simplify_multiple.ipynb  simplify_single-dev.ipynb  simplify_single.ipynb
public/: 2023-03-30T12-trajectories.json  aq_connections.json  basic-all-2023-52-v3.json  basic-all-2023-52.json  config.js  kommuner_2024.json  mpa_connectivity.csv  obis_in_mpa_lundy_per_year.csv  platforms_norway.json  production_areas.geojson
public/trajectories/: AIGBR1005.geojson  AIGBR1042.geojson  AIGBR1043.geojson  AIGBR1053.geojson  AIGBR1059.geojson  AIGBR1060.geojson  AIGBR1063.geojson  AIGBR1074.geojson  AIGBR1085.geojson  AIGBR1102.geojson  AIGBR1104.geojson  AIGBR1107.geojson  AIGBR1113.geojson  AIGBR1142.geojson  AIGBR1146.geojson  AIGBR1147.geojson  AIGBR1179.geojson  AIGBR1194.geojson  AIGBR1195.geojson  AIGBR1197.geojson  AIGBR1208.geojson  AIGBR1231.geojson  AIGBR1252.geojson  AIGBR1281.geojson  AIGBR133.geojson  AIGBR1360.geojson  (+93 more)
src/: App.tsx  AquacultureSitesLayer.ts  CountyLayer.ts  LayerSwitcher.tsx  MapContainer.tsx  Matrix.tsx  MultiSelectDetails.tsx  OceanTempLayer.ts  OverviewDetails.tsx  ProductionAreaLayer.ts  ProtectedAreaDetails.tsx  RiskLayer.ts  SingleSiteDetails.tsx  TrajectoryLayer.ts  constants.ts  index.css  index.tsx  state.tsx  types.ts  utils.ts
(+40 files in other folders)
